# Finance-Calculator

./: DEPLOYMENT.md  LIVE_TRADING_COMPLETE.md  README.md  firebase.json  pyproject.toml  render.yaml  start.sh
docs/: readme_images.md  recommendation_workflow.md
src/quant_agent/: recommendations.py
src/quant_agent/api/: main.py
src/quant_agent/sources/: __init__.py  sec.py  twitter.py  web.py
src/quant_agent/trading/: __init__.py  alpaca_client.py  scheduler.py  trading_executor.py
src/quant_agent/web/: dashboard.py
static/: trading-dashboard.html
tests/: test_api_recommendations.py  test_recommendations.py
