[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-traversal-unstructured-data"
version = "0.1.0"
description = "Agentic traversal platform for unstructured financial data and quant research"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "python-dotenv>=1.0,<2.0",
  "alpaca-trade-api>=3.0,<4.0",
  "apscheduler>=3.10,<4.0",
  "aiofiles>=23.2,<24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
